[gd_scene load_steps=22 format=3 uid="uid://b2cdwd6ha3pdc"]

[ext_resource type="Texture2D" uid="uid://hecrnd1mpc76" path="res://Sprites/Slimer.png" id="1_a1hnb"]
[ext_resource type="Script" path="res://Scripts/slime.gd" id="1_qkicx"]
[ext_resource type="Texture2D" uid="uid://b5et5gg5lwgrv" path="res://Sprites/SlimerDeath.png" id="2_okf4u"]
[ext_resource type="AudioStream" uid="uid://14v1d3db2mf1" path="res://Audio/EnemyDeath.mp3" id="4_r1ruq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_il0q0"]
atlas = ExtResource("2_okf4u")
region = Rect2(0, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_f8tjk"]
atlas = ExtResource("2_okf4u")
region = Rect2(64, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_rt82d"]
atlas = ExtResource("2_okf4u")
region = Rect2(128, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_335lh"]
atlas = ExtResource("2_okf4u")
region = Rect2(192, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3t1e"]
atlas = ExtResource("2_okf4u")
region = Rect2(256, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_si3g8"]
atlas = ExtResource("2_okf4u")
region = Rect2(320, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ug8j"]
atlas = ExtResource("2_okf4u")
region = Rect2(384, 0, 64, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6n8o"]
atlas = ExtResource("1_a1hnb")
region = Rect2(0, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_5cyxf"]
atlas = ExtResource("1_a1hnb")
region = Rect2(41, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_svoc0"]
atlas = ExtResource("1_a1hnb")
region = Rect2(82, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_8x1n7"]
atlas = ExtResource("1_a1hnb")
region = Rect2(123, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_1jv5x"]
atlas = ExtResource("1_a1hnb")
region = Rect2(164, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_55bbs"]
atlas = ExtResource("1_a1hnb")
region = Rect2(205, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_smbhf"]
atlas = ExtResource("1_a1hnb")
region = Rect2(246, 0, 41, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_0cmvc"]
atlas = ExtResource("1_a1hnb")
region = Rect2(287, 0, 41, 38)

[sub_resource type="SpriteFrames" id="SpriteFrames_xysm6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_il0q0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f8tjk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rt82d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_335lh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3t1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_si3g8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ug8j")
}],
"loop": false,
"name": &"death",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6n8o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5cyxf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_svoc0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8x1n7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1jv5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_55bbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_smbhf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0cmvc")
}],
"loop": true,
"name": &"default",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iwgk4"]
size = Vector2(24, 20)

[node name="Area2D" type="Area2D" node_paths=PackedStringArray("animate")]
script = ExtResource("1_qkicx")
animate = NodePath("AnimatedSprite2D")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_xysm6")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1, 9)
shape = SubResource("RectangleShape2D_iwgk4")

[node name="audio_death" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_r1ruq")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
